added css3 calc and calc js classList

--- a/calc/index.html
+++ b/calc/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" href="mijn.css">
+</head>
 <body>
 
 <form>
-  <select onchange="fun()" id="mySelect" size="4">
+  <select class="sel" onchange="fun()" id="mySelect" size="4">
     <option>plus</option>
-    <option>no item</option>
+    <option>min</option>
     <option>no item</option>
     <option>no item</option>
   </select>
