* added to calc and css3 added

--- a/calc/index.html
+++ b/calc/index.html
@@ -9,7 +9,7 @@
   <select class="sel" onchange="fun()" id="mySelect" size="4">
     <option>plus</option>
     <option>min</option>
-    <option>no item</option>
+    <option>keer</option>
     <option>no item</option>
   </select>
 </form>
