calc work css3 js

--- a/calc/index.html
+++ b/calc/index.html
@@ -10,7 +10,7 @@
     <option>plus</option>
     <option>min</option>
     <option>keer</option>
-    <option>no item</option>
+    <option>deel</option>
   </select>
 </form>
 
