calc no characters only numbers update index and js

--- a/calc/index.html
+++ b/calc/index.html
@@ -14,8 +14,8 @@
   </select>
 </form>
 
-<input type="text" id="een"  name="" value="">
-<input type="text" id="twee" name="" value="">
+<input onkeypress="return numcheck()"  type="text" id="een"  name="" value="">
+<input  onkeypress="return numcheck()"  type="text" id="twee" name="" value="">
 
 
 
