--- a/calc/index.html
+++ b/calc/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="mijn.css">
 </head>
 <body>
-
+<input type="button" onclick="user_btn()" class="pos_btn btn_style" value="color">
 <form>
   <select class="sel" onchange="fun()" id="mySelect" size="4">
     <option>plus</option>
@@ -14,8 +14,8 @@
   </select>
 </form>
 
-<input onkeypress="return numcheck()"  type="text" id="een"  name="" value="">
-<input  onkeypress="return numcheck()"  type="text" id="twee" name="" value="">
+<input onkeypress="return numcheck()" type="text" id="een"  name="" value="">
+<input  onkeypress="return numcheck()" type="text" id="twee" name="" value="">
 
 
 
