--- a/calc/index.html
+++ b/calc/index.html
@@ -4,13 +4,14 @@
 <link rel="stylesheet" href="mijn.css">
 </head>
 <body>
-<input type="button" onclick="user_btn()" class="pos_btn btn_style" value="color">
+<input type="button" onclick="user_btn()" class="pos_btn_1 btn_style" value="do you want a random color">
+<input type="button" onclick="deleteUser()" class="pos_btn_2 btn_style" value="reset">
 <form>
   <select class="sel" onchange="fun()" id="mySelect" size="4">
-    <option>plus</option>
-    <option>min</option>
-    <option>keer</option>
-    <option>deel</option>
+    <option>add</option>
+    <option>subtract</option>
+    <option>multiply</option>
+    <option>divide</option>
   </select>
 </form>
 
