added rgba and background random on js

--- a/calc/index.html
+++ b/calc/index.html
@@ -3,11 +3,11 @@
 <head>
 <link rel="stylesheet" href="mijn.css">
 </head>
-<body>
+<body class="test">
   <div class="btn">
-<input type="button" onclick="user_btn()" class="btn_style" value="do you want a random color">
+<input type="button" onclick="user_btn()" class="btn_style nl_color" value="do you want a random color">
 <input type="button" onclick="deleteUser()" class="btn_style" value="reset">
-<input type="button" onclick="dutch()"  class="btn_style"  value="want you dutch nl">
+<input type="button" onclick="dutch()"  class="btn_style nl_nl"  value="want you dutch nl">
 </div>
 <form>
   <select class="sel" onchange="fun()" id="mySelect" size="4">
