--- a/input_regex/regex_test.html
+++ b/input_regex/regex_test.html
@@ -12,6 +12,7 @@
 function test (data) {
 let reg = /[^a-z]+|kut|hoer/gi;
 data.value = data.value =  data.value.replace(reg , "");
+//   regex filter words code =  /|word|word2|word3|shit|/ and this is not numbers [^a-z]+ 
 }
 </script>
 </body>
