--- a/input_regex/regex_test.html
+++ b/input_regex/regex_test.html
@@ -10,9 +10,9 @@
   <textarea name="" id="oke" cols="30" onkeyup="test(this)" rows="10"></textarea>
 <script>
 function test (data) {
-let reg = /[^a-z]+|kut|hoer/gi;
-data.value = data.value =  data.value.replace(reg , "");
-//   regex filter words code =  /|word|word2|word3|shit|/ and this is not numbers [^a-z]+ 
+let reg = /een|bol/gi;
+data.value = data.value =  data.value.replace(reg , " ");
+//   regex filter words code =  /|word|word2|word3|shit|/ and this is not numbers [^a-z]+
 }
 </script>
 </body>
