fix a bug on email regex if not null

--- a/have_email.html
+++ b/have_email.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-<div id="doc">Complete Javascript Course</div>
+<div id="doc">0</div>
 <textarea name="" id="textarea" placeholder="not more then 100 char" onkeydown="weg()" cols="100" rows="12"></textarea>
 <input type="button" onclick="lookUp()" value="find text">
 <div id="doc1"></div>
@@ -16,8 +16,9 @@ let reg_txt = /[a-zA-Z0-9]+@[a-z ]{2,5}\.[a-z]{2,6}/gi
 let html = "";
 
 function weg () {
+
 let txt_area = document.getElementById("textarea");
-if(txt_area.value.length > 100){
+if(txt_area.value.length  > 100){
  txt_area.value = "";
 
 }
@@ -33,6 +34,7 @@ function lookUp () {
   }
 let txt = document.getElementById("textarea").value
 let regex = txt.match(reg_txt)
+if(regex){
 for(let i = 0; i < regex.length; i++){
 
 
@@ -40,8 +42,11 @@ for(let i = 0; i < regex.length; i++){
 let doc1 = document.getElementById('doc1').innerHTML += regex[i] + "<br>"
 
 }
+}
 
 }
+
+
 </script>
 </body>
 </html>
