clock added + countdown one html

--- a/clock on js/index.html
+++ b/clock on js/index.html
@@ -13,12 +13,26 @@
 
 </style>
 <body>
+<button type="button" class="btn" onclick="del()">countdown delete</button>
+<button  class="btn" onclick="back()">countdown back</button>
 <div class="center">
 <div class="background_klok">
-<div id="klok">
-</div><!-- id klok end -->
+
+<div id="klok" class="rand_style somedata1"></div>
+<!-- id klok end -->
+</div><!-- backgreound klok end -->
+
+
+<div class="background_klok">
+<div class="somedata">
+<div id="countdown" class="rand_style "></div>
+</div>
+<!-- id klok end -->
 </div><!-- backgreound klok end -->
 </div><!-- center end -->
+
+</div><!-- center end -->
+
 <script src="main.js">
 // script js begin here file main.js
 
