--- a/clock on js/index.html
+++ b/clock on js/index.html
@@ -25,7 +25,10 @@
 
 <div class="background_klok">
 <div class="somedata">
-<div id="countdown" class="rand_style "></div>
+<div id="countdown" class="rand_style ">
+
+</div>
+  <div class="happy"></div>
 </div>
 <!-- id klok end -->
 </div><!-- backgreound klok end -->
