sample search bar what you can with it

--- a/doctor code/Filter_Search_List_using_JavaScript.html
+++ b/doctor code/Filter_Search_List_using_JavaScript.html
@@ -37,6 +37,40 @@ li[i].style.display = "none";
 }
 })
 
+//
+//************************************************************* sample for what can with it script*****************************
+//
+// document.getElementById('search').addEventListener("keyup" , function(){
+//
+//
+// let input = document.getElementById("search");
+// let filterval = input.value.toLowerCase();
+// // let ul = document.getElementById("menu");
+// //ul.getElementsByTagName("li");
+// let li = document.querySelectorAll(".test");//what want you in array
+//
+// for(let i = 0; i < li.length; i++){
+//
+// let a = li[i].querySelectorAll("h2")[0];//whiich item seach for
+// if(a.innerHTML.toLowerCase().indexOf(filterval) > -1){
+// li[i].style.display = "";
+// }else {
+// li[i].style.display = "none";
+// }
+// }
+// })
+//
+//
+
+//************************************************************* sample for what can with it script*****************************
+// //i learn a lot if you keep writing i most  it multiple times written
+// // for but all of the function have i learned on the course from udemy "the functions itself"
+// // the code find your here  https://www.youtube.com/watch?v=Q_TplfrQlE0
+// //thanks for the code
+
+
+
+
 
 //i learn a lot if you keep writing i most  it multiple times written
 // for but all of the function have i learned on the course from udemy "the functions itself"
